sample_yamls/sleep-bypass-outbound-envoy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep2
  template:
    metadata:
      labels:
        app: sleep2
      annotations:
        traffic.sidecar.istio.io/includeOutboundIPRanges: "172.30.0.0/16,172.21.0.0/16,10.10.10.0/24"
    spec:
      serviceAccountName: sleep
      containers:
      - name: sleep2
        image: governmentpaas/curl-ssl
        command: ["/bin/sleep", "3650d"]
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/sleep/tls
          name: secret-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: sleep-secret
          optional: true
---
