sample_yamls/debug.yaml
apiVersion: v1
kind: Service
metadata:
  name: debug
  labels:
    app: debug
    service: debug
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: debug
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debug
  template:
    metadata:
      labels:
        app: debug
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: sleep
      containers:
      - name: debug
        image: curlimages/curl
        command: ["/bin/sleep", "3650d"]
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/sleep/tls
          name: secret-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: debug-secret
          optional: true
---
