sample_yamls/locality-failover-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-dns
spec:
  hosts:
  - myapi.com
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  endpoints:
  - address: dynamodb.ca-central-1.amazonaws.com
    locality: us-central1
    ports:
      http: 80
  - address: dynamodb.us-west-2.amazonaws.com
    locality: us-west
    ports:
      http: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: myapidr
spec:
  host: myapi.com
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1000
      http:
        http2MaxRequests: 1000
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutiveGatewayErrors: 7
      interval: 30s
      baseEjectionTime: 30s
